force-app/main/default/objects/Field__c/Field__c.object-meta.xml
<CustomObject>
    <label>Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>