force-app/main/default/objects/Field__c/fields/Number_of_Records_Populated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Records_Populated__c</fullName>
    <label>Number of Records Populated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>