force-app/main/default/objects/Field__c/fields/Percent_of_Records_Populated__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Records_Populated__c</fullName>
    <formula>Number_of_Records_Populated__c / Object__r.Number_of_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of Records Populated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>